fixed alignement of project and the way autoclickers works

--- a/src/index.css
+++ b/src/index.css
@@ -183,18 +183,20 @@ button:focus-visible {
 }
 
 .projects {
-  margin-top: 30px;
-  padding: 20px;
-  border-top: 2px solid white;
-  text-align: center;
+  position: fixed;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+
   width: 90%;
   max-width: 2000px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 15%;
+  padding: 20px;
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 10px;
+  border-top: 2px solid white;
+  text-align: center;
 }
+
 
 .projects h2 {
   font-size: 1.8rem;
